language_tests/source_files/valid/return_expression_if_branch_check.tr
// CHECK_ONLY

func choose(_ flag: bool) -> int32 {
    let value = if flag {
        return 7
    } else {
        3
    }

    value
}

func main() {
    let _ = choose(false)
}
