language_tests/source_files/invalid/result_orelse_requires_error_copy.tr
struct NonCopyError {
    code: int32
}

func main() {
    let left: Result[int32, NonCopyError] = .err(NonCopyError { code: 3 })
    let _ = left.orElse(|e| -> Result[int32, NonCopyError] { .ok(e.code) })
}
